[project]
name = "chatbot-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.0",
    "fastapi>=0.115.14",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5,<0.6",
    "langgraph-cli[inmem]>=0.3.3",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.2",
]
